--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,17 +1,17 @@
 .css-bzmsy2-MuiFormLabel-root-MuiInputLabel-root {
-	color: rgb(255 255 255 / 60%);
+	color: rgb(255 255 255 / 60%) !important;
 }
 
 .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
-	border-color: rgb(255 255 255 / 23%);
+	border-color: rgb(255 255 255 / 23%) !important;
 }
 .css-ztdmtb-MuiInputBase-root-MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
-	border-color: rgb(255 255 255 / 87%);
+	border-color: rgb(255 255 255 / 87%) !important;
 }
 
 .css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator {
-	color: rgb(255 255 255 / 54%);
+	color: rgb(255 255 255 / 54%) !important;
 }
 .css-113ntv0-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator {
-	color: rgb(255 255 255 / 54%);
+	color: rgb(255 255 255 / 54%) !important;
 }
