--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,17 +1,15 @@
 .css-bzmsy2-MuiFormLabel-root-MuiInputLabel-root {
-	color: rgb(255 255 255 / 60%) !important;
+	color: var(--tg-theme-text-color, 60%) !important;
 }
 
 .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
-	border-color: rgb(255 255 255 / 23%) !important;
+	border-color: var(--tg-theme-text-color, 23%) !important;
 }
 .css-ztdmtb-MuiInputBase-root-MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
-	border-color: rgb(255 255 255 / 87%) !important;
+	border-color: var(--tg-theme-text-color, 87%) !important;
 }
 
-.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator {
-	color: rgb(255 255 255 / 54%) !important;
-}
+.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator,
 .css-113ntv0-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator {
-	color: rgb(255 255 255 / 54%) !important;
+	color: var(--tg-theme-text-color, 54%) !important;
 }
