--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,15 +1,12 @@
-.css-bzmsy2-MuiFormLabel-root-MuiInputLabel-root {
+.MuiInputLabel-root {
 	color: var(--tg-theme-text-color, 60%) !important;
 }
-
-.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+.MuiOutlinedInput-notchedOutline {
 	border-color: var(--tg-theme-text-color, 23%) !important;
 }
-.css-ztdmtb-MuiInputBase-root-MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+.MuiOutlinedInput-notchedOutline:hover {
 	border-color: var(--tg-theme-text-color, 87%) !important;
 }
-
-.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator,
-.css-113ntv0-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator {
+.MuiButtonBase-root {
 	color: var(--tg-theme-text-color, 54%) !important;
 }
