--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,6 +1,9 @@
 .MuiInputLabel-root {
 	color: var(--tg-theme-text-color, 60%) !important;
 }
+.MuiInputBase-input {
+	color: var(--tg-theme-text-color, 40%) !important;
+}
 .MuiOutlinedInput-notchedOutline {
 	border-color: var(--tg-theme-text-color, 23%) !important;
 }
