--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -11,7 +11,7 @@
 	border-color: var(--tg-theme-text-color, 87%) !important;
 }
 .MuiButtonBase-root {
-	color: var(--tg-theme-bg-color, 84%) !important;
+	color: var(--tg-theme-button-color, 84%) !important;
 }
 .MuiButtonBase-root.MuiIconButton-root {
 	color: var(--tg-theme-text-color, 54%) !important;
