--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -17,8 +17,8 @@
 	color: var(--tg-theme-text-color, 54%) !important;
 }
 .MuiButtonBase-root.MuiChip-root {
-	color: var(--tg-theme-text-color, 54%) !important;
-	background-color: var(--tg-theme-bg-color, 84%) !important;
+	color: var(--tg-theme-bg-color, 54%) !important;
+	background-color: var(--tg-theme-text-color, 8%) !important;
 }
 .MuiButtonBase-root.MuiChip-root .MuiSvgIcon-root {
 	background-color: var(--tg-theme-text-color, 26%) !important;
